--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --btnbg: #9d1515;
+  --btntxt: #ffffff;
 }
 
 @theme inline {
@@ -19,8 +21,13 @@
   }
 }
 
-body {
+body, .aside {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.actionbtn {
+  background-color: var(--btnbg);
+  color: var(--btntxt);
 }
